tests/positive/assignment_complex.em
int main() {
    int x = 1;
    int y = 2;
    x = y = 3;
    return x;
}