tests/negative/if_else_basic.em
int main() {
    if {
        return 1;
    }
    return 0;
}